--- a/index.html
+++ b/index.html
@@ -1,31 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/autobloom-deployed-prototype/favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/autobloom-deployed-prototype/logo192.png"
-    />
-    <link rel="manifest" href="/autobloom-deployed-prototype/manifest.json" />
-    <title>Autobloom</title>
-    <script
-      defer="defer"
-      src="/autobloom-deployed-prototype/static/js/main.2e55e7b4.js"
-    ></script>
-    <link
-      href="/autobloom-deployed-prototype/static/css/main.5a2a8526.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/autobloom-deployed-prototype/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/autobloom-deployed-prototype/logo192.png"/><link rel="manifest" href="/autobloom-deployed-prototype/manifest.json"/><title>React App</title><script defer="defer" src="/autobloom-deployed-prototype/static/js/main.b9b81b23.js"></script><link href="/autobloom-deployed-prototype/static/css/main.5a2a8526.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
