--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script>
+      var humidityLevel = document.querySelector(
+        "#root > div > div > div > div > div > div:nth-child(4) > div > div:nth-child(1) > div > h1"
+      );
+
       async function connectToESP32(service_uuid, characteristic_uuid) {
         try {
           const device = await navigator.bluetooth.requestDevice({
-            filters: [{ namePrefix: "ESP32" }],
+            filters: [],
             optionalServices: [service_uuid],
           });
 
@@ -44,6 +48,8 @@
             (event) => {
               const value = new TextDecoder().decode(event.target.value);
               console.log("Received:", value);
+
+              if (humidityLevel) humidityLevel.innerHTML = `${value}%`;
             }
           );
 
@@ -58,7 +64,17 @@
       //   await connectToESP32("0000ffe0-0000-1000-8000-00805f9b34fb");
       // };
 
+      var resyncBtn = document.querySelector(
+        "#root > div > div > div > div > div > div.rt-Box.rt-r-mt-4 > div > button:nth-child(2)"
+      );
+
       window.connectToESP32 = connectToESP32;
+
+      if (resyncBtn) {
+        resyncBtn.addEventListener("click", async () => {
+          await connectToESP32();
+        });
+      }
     </script>
   </body>
 </html>
