--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script>
-      var humidityLevel = document.querySelector(
-        "#root > div > div > div > div > div > div:nth-child(4) > div > div:nth-child(1) > div > h1"
-      );
-
       async function connectToESP32(service_uuid, characteristic_uuid) {
         try {
           const device = await navigator.bluetooth.requestDevice({
@@ -60,21 +56,26 @@
         }
       }
 
-      // document.onload = async () => {
-      //   await connectToESP32("0000ffe0-0000-1000-8000-00805f9b34fb");
-      // };
+      window.onload = async () => {
+        console.log("Ready");
+        setInterval(async () => {
+          var humidityLevel = document.querySelector(
+            "#root > div > div > div > div > div > div:nth-child(4) > div > div:nth-child(1) > div > h1"
+          );
 
-      var resyncBtn = document.querySelector(
-        "#root > div > div > div > div > div > div.rt-Box.rt-r-mt-4 > div > button:nth-child(2)"
-      );
+          var resyncBtn = document.querySelector(
+            "#root > div > div > div > div > div > div.rt-Box.rt-r-mt-4 > div > button:nth-child(2)"
+          );
 
-      window.connectToESP32 = connectToESP32;
+          window.connectToESP32 = connectToESP32;
 
-      if (resyncBtn) {
-        resyncBtn.addEventListener("click", async () => {
-          await connectToESP32();
-        });
-      }
+          if (resyncBtn) {
+            resyncBtn.addEventListener("click", async () => {
+              await connectToESP32();
+            });
+          }
+        }, 1500);
+      };
     </script>
   </body>
 </html>
