--- a/index.html
+++ b/index.html
@@ -60,17 +60,27 @@
         }
       }
 
-      async function readData() {
+      async function readData(humidityLevelDOM) {
         while (port.readable) {
-          const reader = port.readable.getReader();
+          const decoder = new TextDecoderStream();
+          const streamClosed = port.readable.pipeTo(decoder.writable);
+          const lineReader = decoder.readable
+            .pipeThrough(new TransformStream(new LineBreakTransformer()))
+            .getReader();
+
           try {
             while (true) {
-              const { value, done } = await reader.read();
+              const { value, done } = await lineReader.read();
               if (done) {
                 // |reader| has been canceled.
                 break;
               }
               console.log("Value: ", value);
+
+              let parsedData = parseData(value);
+              console.log(parsedData);
+
+              humidityLevelDOM.innerHTML = parseData["hum"];
             }
           } catch (error) {
             console.error("Error during reading: ", error);
@@ -80,28 +90,56 @@
         }
       }
 
+      async function writeData(textData) {
+        const encoder = new TextEncoder();
+        const writer = port.writable.getWriter();
+        await writer.write(encoder.encode(textData));
+        writer.releaseLock();
+      }
+
+      function parseData(textData) {
+        let splitStr = textData.split("|");
+        if (splitStr.length != 2) return { moist: null, hum: null };
+
+        return { moist: splitStr[0], hum: splitStr[1] };
+      }
+
       window.onload = async () => {
-        console.log("Ready");
-        var humidityLevel = document.querySelector(
-          "#root > div > div > div > div > div > div:nth-child(4) > div > div:nth-child(1) > div > h1"
-        );
+        setInterval(async () => {
+          console.log("Ready");
+          var humidityLevel = document.querySelector(
+            "#root > div > div > div > div > div > div:nth-child(4) > div > div:nth-child(1) > div > h1"
+          );
 
-        var resyncBtn = document.querySelector(
-          "#root > div > div > div > div > div > div.rt-Box.rt-r-mt-4 > div > button:nth-child(2)"
-        );
+          var resyncBtn = document.querySelector(
+            "#root > div > div > div > div > div > div.rt-Box.rt-r-mt-4 > div > button:nth-child(2)"
+          );
 
-        window.connectToSerial = connectToSerial;
-        window.readData = readData;
+          var waterNowBtn = document.querySelector("");
 
-        if (resyncBtn) {
-          resyncBtn.addEventListener("click", async () => {
-            const port = await connectToSerial(0x2341);
+          window.connectToSerial = connectToSerial;
+          window.readData = readData;
 
-            if (port) {
-              await readData();
-            }
-          });
-        }
+          let port = null;
+
+          if (resyncBtn) {
+            resyncBtn.addEventListener("click", async () => {
+              port = await connectToSerial(0x2341);
+
+              if (port) {
+                await readData(humidityLevel);
+              }
+            });
+          }
+
+          if (waterNowBtn) {
+            waterNowBtn.addEventListener("click", async () => {
+              if (port) {
+                await writeData("W");
+              }
+            });
+          }
+        }, 1500);
       };
     </script>
   </body>
