Added water now btn

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
             "#root > div > div > div > div > div > div.rt-Box.rt-r-mt-4 > div > button:nth-child(2)"
           );
 
-          var waterNowBtn = document.querySelector("");
+          var waterNowBtn = document.querySelector(
+            "#root > div > div > div > div > div > div.rt-Box.rt-r-mt-4 > div > button:nth-child(1)"
+          );
 
           window.connectToSerial = connectToSerial;
           window.readData = readData;
