--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       }
 
       window.onload = async () => {
-        setInterval(async () => {
+        setTimeout(async () => {
           console.log("Ready");
           var humidityLevel = document.querySelector(
             "#root > div > div > div > div > div > div:nth-child(4) > div > div:nth-child(1) > div > h1"
