--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               }
 
               if (parsed.hum && solarLevelDOM) {
-                solarLevelDOM.innerText = parsed.moist;
+                solarLevelDOM.innerText = parsed.hum;
               }
             }
           } catch (err) {
